<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTopic"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"

        android:text="@string/my_category"
        android:textSize="24sp"

        android:textColor="@color/bisquit"
        android:layout_gravity="center_horizontal">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:textColor="@color/bisquit"

            android:textSize="18sp"
            android:text="@string/input_topic"

            android:layout_weight="2">
        </TextView>

        <EditText
            android:id="@+id/etTopic"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"

        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/date_and_time">
    </Button>

    <Button
        android:id="@+id/btnAddTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/adding_topic">
    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bisquit">
    </View>

    <ListView
        android:id="@+id/lvFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>